--- a/client/src/components/contacts/AvatarPicker/AvatarPicker.module.css
+++ b/client/src/components/contacts/AvatarPicker/AvatarPicker.module.css
@@ -29,6 +29,7 @@
   width: 88px;
   height: 88px;
   border-radius: 50%;
+  border: 1px solid var(--avatar-large-border);
   background-color: var(--gray-80);
   color: var(--fg-80);
   display: grid;
